specs/001-typescript-to-zig-native/examples/invalid/dynamic-property-dot.ts
type User = { id: int };
let user: User = { id: 1 };
user.name = "Ada";
